--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ See project Fitness zone.</p>
         <!-- Map-->
         <div class="mapouter mb-3">
             <div class="gmap_canvas">
-                <iframe class="p-1 m-1 rounded border border-white" width="90%" height="500px" id="gmap_canvas" src="https://maps.google.com/maps?q=200%20old%20carriage%20dr&t=&z=11&ie=UTF8&iwloc=&output=embed">
+                <iframe class="p-1 m-1 rounded border border-white" width="90%" height="500px" id="gmap_canvas" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDI9bvCSqPrOmVsB8WmxNifrxLUHcGn5QU&q=Space+Needle,Seattle+WA">
                     
                 </iframe>
             </div>
